--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <html>
-    <head>
-        <style type="text/css" media="screen">
-        </style>
-    </head>
+    <head></head>
     <body>
     Hello world!
     </body>
